# application-sdk

./: .coderabbit.yaml  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .sdk-review-vpn-smoke-test.md  <MagicMock id='13457161104'>  AGENTS.md  ATLAN_UPLOAD_README.md  CHANGELOG.md  CLAUDE.md  Dockerfile  LockManagerTRD.md  MIGRATION.md  Makefile  PR_GUIDELINES.md  README.md  README_ICEBERG.md  REVIEWER_SMOKE_TEST.md  SECURITY.md  VULNERABILITY_REPORT.md  entrypoint.sh  main2.py  mkdocs.yml  plan.md  pr755.diff  pyproject.toml  pyrightconfig.json  renovate.json  requirements.txt  test-rules.md  workflow_status.md
.claude/: settings.json
.claude/commands/: challenge-pr.md  create-activity.md  create-client.md  create-handler.md  create-pr.md  create-transformer.md  create-workflow.md  design-review.md  fix-precommit.md  merge-and-push.md  review.md  write-integration-tests.md  write-tests.md
.claude/plans/: phase2-migration-automation.md
.cursor/: BUGBOT.md
.cursor/rules/: build-security.mdc  code-review.mdc  commits.mdc  deepwiki.mdc  documentation.mdc  exception-handling.mdc  guidelines.mdc  logging.mdc  performance.mdc  setup.mdc  standards.mdc  testing.mdc
.github/: CODEOWNERS  dependabot.yaml  pull_request_template.md  release.yaml
.github/issues/: README.md  aws-azure-authentication.md  create-v0.2.0-issues.py  dapr-bindings-observability.md  dapr-file-size-optimization.md  dict-type-safety-replacement.md  docker-base-image-security.md  docker-configs-versioning.md  log-levels-standardization.md  memory-leak-verification.md  multi-database-extraction.md  process-thread-management.md  public-api-documentation.md  setup-process-consolidation.md  state-management-multiple-workers.md  ui-sdk-exploration.md
.greptile/: config.json  files.json  rules.md
.mothership/: review-policy.md  review.yaml
.security/: README.md  allowlist.json  approvers.json  base-allowlist.json
application_sdk/: __init__.py  _discovery_errors.py  app.py  config.py  const.py  constants.py  discovery.py  errors.py  logging.py  main.py  main_errors.py  models.py  routing.py  utils.py  version.py  worker.py
atlanhq/: Chart.yaml  helmfile.yaml
charts/: Chart.yaml  helmfile.yaml  values.yaml
components/: README.md  atlan-storage.yaml  awssecretstore.yaml  configuration.yaml  eventstore.yaml  http-binding.yaml  lockstore.yaml  messaging.yaml  objectstore.yaml  pubsub.yaml  secretstore.yaml  subscription.yaml
conformance/: README.md
contract-toolkit/: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  cliff.toml
contracts/: app-contract-toolkit@0.10.0  app-contract-toolkit@0.10.0.sha256  app-contract-toolkit@0.10.0.zip.sha256  app-contract-toolkit@0.10.1  app-contract-toolkit@0.10.1.sha256  app-contract-toolkit@0.10.1.zip.sha256  app-contract-toolkit@0.10.2  app-contract-toolkit@0.10.2.sha256  app-contract-toolkit@0.10.2.zip.sha256  app-contract-toolkit@0.10.3  app-contract-toolkit@0.10.3.sha256  app-contract-toolkit@0.10.3.zip.sha256  app-contract-toolkit@0.10.4  app-contract-toolkit@0.10.4.sha256  app-contract-toolkit@0.10.4.zip.sha256  app-contract-toolkit@0.10.5  app-contract-toolkit@0.10.5.sha256  app-contract-toolkit@0.10.5.zip.sha256  app-contract-toolkit@0.11.0  app-contract-toolkit@0.11.0-arun619.0  app-contract-toolkit@0.11.0-arun619.0.sha256  app-contract-toolkit@0.11.0-arun619.0.zip.sha256  app-contract-toolkit@0.11.0-arun619.1  app-contract-toolkit@0.11.0-arun619.1.sha256  app-contract-toolkit@0.11.0-arun619.1.zip.sha256  app-contract-toolkit@0.11.0-arun619.2  app-contract-toolkit@0.11.0-arun619.2.sha256  app-contract-toolkit@0.11.0-arun619.2.zip.sha256  app-contract-toolkit@0.11.0-arun619.3  app-contract-toolkit@0.11.0-arun619.3.sha256  app-contract-toolkit@0.11.0-arun619.3.zip.sha256  app-contract-toolkit@0.11.0.sha256  app-contract-toolkit@0.11.0.zip.sha256  app-contract-toolkit@0.11.1  app-contract-toolkit@0.11.1.sha256  app-contract-toolkit@0.11.1.zip.sha256  app-contract-toolkit@0.12.0  app-contract-toolkit@0.12.0.sha256  app-contract-toolkit@0.12.0.zip.sha256  app-contract-toolkit@0.13.0  (+35 more)
dashboard/: README.md  app.py
deploy/: simple-fastapi.yaml
docs/: ARCHITECTURE.md  BASIC_APPLICATION_GUIDE.md  BEST_PRACTICES.md  CONFIGURATION.md  DEVELOPMENT.md  README.md  SCALE_TESTS.md  SQL_APPLICATION_GUIDE.md  USAGE.md  conf.py  configuration.md  index.md  infra-failure-diagnosis.md  migration-guide-v3.md  mkdocs.yml  native-migration-guide.md  rca-shutdown-drain-delay-2026-03-27.md  rfc-entity-raw-namespace.md  sdk-architecture.drawio  sdk-explained-simply.md  sdk-folder-guide.md  upgrade-guide-v3.md  v3-docs-code-gaps.md  v3-parity-report.md  whats-new-v3.md  worker-eviction-and-sigterm.md
examples/: Makefile  README.md  _e2e_validation_marker.md  application_custom_fastapi.py  application_diff.py  application_fastapi.py  application_hello_world.py  application_iceberg.py  application_lakehouse_events.py  application_refactor.py  application_snowflake.py  application_sql.py  application_sql_e2e.py  application_sql_miner.py  application_sql_with_custom_pyatlan_transformer.py  application_sql_with_custom_transformer.py  application_sql_with_lakehouse_load.py  application_subscriber.py  application_subscriber2.py  application_temp.py  dapr.yaml  main_temp.py  run_examples.py  sql_connector.py  subscriber_manifest.json  temp_run.sh
llmtext/: 1. OVERVIEW.md  10. config_worker.md  2. activities.md  3. application.md  4. clients.md  5. common.md  6. handlers.md  7. inputs_and_outputs.md  8. transformers.md  9. workflows.md
phoenix_sdk/: __init__.py  database.py  logging.py  models.py
plan/: about-atlan.md  architecture-components.md  current-workflow-setup.md  customer-support-problems.md  new-architecture.md  system-prompt.md  workflows-purpose.md
remediation/: README.md
renovate-config/: default.json  self-hosted.js
scripts/: benchmark_listing.py  benchmark_listing_results.md  changelog.py  measure_server_memory.py  release.py  test-storage-integration.sh
tests/: conftest.py  test_activities.py
ui/: README.md  app.py
(+2494 files in other folders)
